# study-manim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml
01-hello-world/: README.md  build.cmd  main.py
02-write/: README.md  main.py  main1.py  main2.py  main3.py  manim.cfg
03-rectangle/: main.py
04-shift/: README.md  main.py  manim.cfg
05-shape-param/: main.py
06-code/: README.md  build.cmd  main.py
07-roundRectangle/: README.md  main.py
08-different-animate/: README.md  build.cmd  main.py
